--- a/wordpress/kitchen.yml
+++ b/wordpress/kitchen.yml
@@ -22,9 +22,14 @@ verifier:
 
 platforms:
   - name: ubuntu-20.04
+  - name: centos-7.8
 
 suites:
   - name: default
+    verifier:
+      inspec_tests:
+        - test/integration/default
+  - name: apache2
     verifier:
       inspec_tests:
         - test/integration/default
